src/css/style.css
/* ... */
@media only screen and (min-width:785px) {
  .about-header img {
    min-width:0;
  }
}

@media only screen and (max-width:784px) {
  .about-header img {
    min-width:100%;
    height:auto;
  }
}

.about-text {
  margin:1.8em 0 2.5em;
}

.about-text details {
  background-color:var(--unsubtle-bg-color);
  border-radius:10px;
  padding:0.2em 0.6em 0.3em;
}

.about-text details summary {
  font-weight:var(--bold-weight);
  text-decoration:none;
}

.about-text .details-content {
  overflow:hidden;
}

.about-text details button {
  margin:0.8em auto 0.4em;
}

@media (scripting:enabled) {
  .about-text details summary {
    list-style:none;
  }

  .about-text details summary::before {
    display:inline-block;
    content:"";
    width:0.7em;
    height:0.7em;
    margin-right:0.4em;
    background-image:url("data:image/svg+xml,%3Csvg viewBox='0 0 10 10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,0 10,5 0,10' /%3E%3C/svg%3E");
    background-size:contain;
    background-repeat:no-repeat;
    transition:transform 0.5s ease;
    transform-origin:center;
  }

  .about-text details[class~="triangle-open"] summary::before {
    transform:rotate(90deg);
  }
}

@media (scripting:none) {
  .about-text details button {
    display:none;
  }
}

.about-text details p:last-child {
  margin-bottom:0.1em;
}

/* ART PROJECTS INDEX */

.art-projects {
  margin-top:35px;
}

.art-project-image-wrapper {
  border:solid 1.5px;
  aspect-ratio:4/3;
  width:100%;
  box-sizing:border-box;
  overflow:hidden;
  border-radius:5px;
  background-color:currentcolor;
}

.art-project img {
  object-fit:cover;
  aspect-ratio:4/3 !important;
  width:100%;
  height:auto;
  display:block;
}

@media only screen and (min-width:785px) {
  .art-projects {
    display:grid;
    grid-template-columns:repeat(auto-fit, minmax(320px, 1fr));
    justify-content:flex-start;
    justify-items:stretch;
    gap:3vw 4vw;
  }

  .art-project {
    max-width:720px;
  }
}

@media only screen and (max-width:784px) {
  .art-project {
    width:100%;
    margin-bottom:40px;
  }
}

.art-project a {
  text-decoration:none;
}

@media (hover:hover) {
  .art-project a:hover {
    color:#000000;
  }
  .art-project a:hover img {
    filter:var(--hover-filter);
  }
  .art-project a:hover .caption {
    filter:var(--svg-hover-filter);
  }
}

.art-project h3 {
  text-align:center;
  margin:0;
  text-transform:none;
  font-size:var(--body-font-size);
}

.art-project p {
  text-align:center;
  margin:.2em 0 .5em 0;
  font-size:var(--small-font-size);
}

.art-project p.tags {
  display:flex;
  justify-content:center;
  gap:0.5em;
  font-size:var(--small-font-size);
  font-weight:var(--medium-weight);
}

.art-project .title {
  font-style:italic;
}

.art-project .project-tag {
  background:#000000;
  border-radius:5px;
  color:var(--white);
  padding:3px 6px;
}

/* CODE PROJECTS INDEX */

.code-projects {
  margin-top:3.5em;
  display:flex;
  flex-direction:column;
  gap:3.5em;
}

.code-project-header {
  display:flex;
  flex-direction:row;
  width:100%;
  gap:1em 2em;
  align-items:center;
  margin-bottom:1em;
}

.code-project-header div {
  flex-basis:60%;
  position:relative;
  max-width:400px;
}

.code-project-header div:first-child {
  flex-basis:40%;
}

.code-project-image-wrapper,
.code-project-header .mobile-thumbnail {
  border:solid 1.5px;
  box-sizing:border-box;
  overflow:hidden;
  border-radius:7px;
  background-color:currentcolor;
}

.code-project-header .mobile-thumbnail {
  position:absolute;
  bottom:0;
  width:30%;
  right:0;
  filter:drop-shadow(-1.5px -1.5px 1.5px rgba(241, 240, 233, 0.2));
}

.code-project-header img {
  object-fit:cover;
  min-width:0;
  position:relative;
  display:block;
  width:100%;
  height:auto;
  border-radius:0;
}

.code-project-header div:has(.mobile-thumbnail) {
  padding-right:min(4.2em, 10vw);
  padding-bottom:1.5em;
}

.code-project-header h3 {
  margin-top:0;
}

.code-project .tags {
  display:flex;
  flex-wrap:wrap;
  gap:0 1ch;
}

.code-project .project-tag {
  opacity:0.4;
}

.code-project .project-tag:before {
  content:"#";
}

.call-to-action {
  margin:5em 0;
  padding:5em;
  border-radius:25px;
  background-color:var(--subtle-bg-color);
  width:fit-content;
  max-width:720px;
  text-align:center;
  justify-content:center;
  display:flex;
  flex-direction:column;
  align-items:center;
  gap:1.5em;
}

.call-to-action * {
  margin:0;
  font-weight:var(--bold-weight);
}

@media only screen and (max-width:784px) {
  .code-project-header {
    flex-direction:column;
    align-items:flex-start;
    margin-bottom:2em;
  }

  .code-project-header div {
    max-width:unset;
  }

  .call-to-action {
    max-width:100%;
    padding: 5em 3vw;
  }
}

.project-details li {
  margin:0.6em 0;
  line-height:1.4em;
}

/* PHOTO GRIDS */

photo-grid {
  display:grid;
  gap:1.2em;
  justify-items:center;
}

photo-grid * {
  min-width:0;
}

photo-grid:not(.tarot) {
  margin-bottom:var(--line-height-em);
}

photo-grid.tarot {
  gap:4rem;
  margin:2rem 0;
  border-radius:10px;
  justify-items:center;
  padding:5.5rem 0 5rem;
  background-color:none;
  transition:background-color 1s;
}

photo-grid.vertical, photo-grid.two-column, photo-grid.three-column {
  margin-top:var(--line-height-em);
}

photo-grid.two-column img, photo-grid.three-column img {
  max-width:100%;
}

@media only screen and (min-width:501px) {
  photo-grid.tarot img {
    max-width:400px;
    max-height:95vh;
    width:auto;
    height:auto;
  }
}

@media only screen and (min-width:785px) {
  photo-grid.tarot{
    background-color:var(--subtle-bg-color);
    transition:background-color 1s;
  }
}

@media only screen and (max-width:500px) {
  photo-grid.tarot {
    padding:2rem 0;
  }
  photo-grid.tarot img {
    max-width:100%;
    max-height:85vh;
    width:auto;
    height:auto;
  }
}

photo-grid:not(.tarot) img {
  margin-bottom:0;
  max-height:1080px;
}

photo-grid a:not(.lightbox-ignore) {
  line-height:1;
  cursor:zoom-in;
}
/* ... */

